projects/batfish/src/test/resources/org/batfish/representation/aws/test-vpc-peering/aws_configs/NetworkInterfaces.json
{
 "NetworkInterfaces": [
  {
   "Attachment": {
    "AttachTime": "2019-11-28 18:51:20+00:00",
    "AttachmentId": "eni-attach-0cdce0fd64f3616f2",
    "DeleteOnTermination": true,
    "DeviceIndex": 0,
    "InstanceId": "i-04a292ff83b3aa833",
    "InstanceOwnerId": "554773406868",
    "Status": "attached"
   },
   "AvailabilityZone": "us-east-2b",
   "Description": "Primary network interface",
   "Groups": [
    {
     "GroupId": "sg-0b3df494998412a48",
     "GroupName": "launch-wizard-3"
    }
   ],
   "InterfaceType": "interface",
   "Ipv6Addresses": [],
   "MacAddress": "06:c5:01:e3:73:54",
   "NetworkInterfaceId": "eni-06347554b65539ff3",
   "OwnerId": "554773406868",
   "PrivateIpAddress": "192.168.2.229",
   "PrivateIpAddresses": [
    {
     "Primary": true,
     "PrivateIpAddress": "192.168.2.229"
    }
   ],
   "RequesterManaged": false,
   "SourceDestCheck": true,
   "Status": "in-use",
   "SubnetId": "subnet-0af94b59d214ff20a",
   "TagSet": [],
   "VpcId": "vpc-09095dbf2886404ee"
  },
  {
   "Attachment": {
    "AttachTime": "2019-11-28 18:50:43+00:00",
    "AttachmentId": "eni-attach-0954405c33a3cce89",
    "DeleteOnTermination": true,
    "DeviceIndex": 0,
    "InstanceId": "i-06ba034d88c84ef07",
    "InstanceOwnerId": "554773406868",
    "Status": "attached"
   },
   "AvailabilityZone": "us-east-2c",
   "Description": "Primary network interface",
   "Groups": [
    {
     "GroupId": "sg-09606ce9642cac154",
     "GroupName": "launch-wizard-2"
    }
   ],
   "InterfaceType": "interface",
   "Ipv6Addresses": [],
   "MacAddress": "0a:63:9f:a8:c0:9a",
   "NetworkInterfaceId": "eni-0f0708220e812876c",
   "OwnerId": "554773406868",
   "PrivateIpAddress": "10.10.10.157",
   "PrivateIpAddresses": [
    {
     "Primary": true,
     "PrivateIpAddress": "10.10.10.157"
    }
   ],
   "RequesterManaged": false,
   "SourceDestCheck": true,
   "Status": "in-use",
   "SubnetId": "subnet-006a19c846f047bd7",
   "TagSet": [],
   "VpcId": "vpc-0404e08ceddf7f650"
  },
  {
   "Attachment": {
    "AttachTime": "2019-11-28 18:49:58+00:00",
    "AttachmentId": "eni-attach-09fcf1e54332997bd",
    "DeleteOnTermination": true,
    "DeviceIndex": 0,
    "InstanceId": "i-0b14080af811fda3d",
    "InstanceOwnerId": "554773406868",
    "Status": "attached"
   },
   "AvailabilityZone": "us-east-2b",
   "Description": "Primary network interface",
   "Groups": [
    {
     "GroupId": "sg-065c26b39e45ae384",
     "GroupName": "launch-wizard-1"
    }
   ],
   "InterfaceType": "interface",
   "Ipv6Addresses": [],
   "MacAddress": "06:78:cb:6c:fa:36",
   "NetworkInterfaceId": "eni-0024c0af5aa1387e5",
   "OwnerId": "554773406868",
   "PrivateIpAddress": "192.168.1.106",
   "PrivateIpAddresses": [
    {
     "Primary": true,
     "PrivateIpAddress": "192.168.1.106"
    }
   ],
   "RequesterManaged": false,
   "SourceDestCheck": true,
   "Status": "in-use",
   "SubnetId": "subnet-0ebf6378a79a3e534",
   "TagSet": [],
   "VpcId": "vpc-00a31ce9d0c06675c"
  }
 ]
}
